# llm-eval-framework

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
src/: __init__.py  cli.py  config.py  main.py
src/evaluators/: __init__.py  base.py  comparative.py  llm.py  rag.py
src/metrics/: __init__.py  builtin.py  custom.py  llm_judge.py
src/reporters/: __init__.py  html_reporter.py  json_reporter.py
src/reporters/templates/: report.html
src/runners/: __init__.py  async_runner.py  checkpoint.py
test_suites/: schema.yaml
test_suites/examples/: qa_suite.yaml  rag_suite.yaml
tests/: conftest.py  test_cli.py  test_evaluators.py  test_metrics.py  test_reporters.py
